# wenyuan-database

./: .env.example  .gitignore  MVP阶段划分与技术栈讨论结果.md  README.md  compose.yaml  start_all.bat  start_all.ps1  后续工作优先级.md  待办事项.md  拟技术栈.md
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: local_file_storage.py  local_hashing_embedding.py  openai_embedding.py  report_llm.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py
backend/app/domain/: __init__.py  enums.py  models.py
backend/app/ports/: __init__.py  embedding.py  file_storage.py  llm.py
backend/app/schemas/: __init__.py  admin.py  auth.py  health.py  knowledge.py  mvp5.py  report.py
backend/app/services/: academic_tools.py  ai_config.py  chunking.py  document_parser.py  document_processing.py  docx_export.py  email_delivery.py  quotas.py  report_generation.py  report_templates.py  sensitive_scan.py  similarity.py
backend/migrations/: README  env.py
backend/scripts/: check_database.py  run_llm_mvp4_validation.py  set_admin_role.py  validate_llm_mvp2_mvp3.py  validate_llm_mvp4.py
backend/tests/: test_chat_credits_and_quotas.py  test_document_pipeline.py  test_domain_contracts.py  test_health.py  test_local_file_storage.py  test_mvp3_academic_tools.py  test_mvp4_ai_configuration.py  test_mvp5_features.py  test_report_generation.py
backend/wenyuan_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  (+4 more)
(+36 files in other folders)
