[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "wenyuan-backend"
version = "0.1.0"
description = "文渊系统后端"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "pgvector>=0.3,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic[email]>=2.9,<3",
  "pydantic-settings>=2.7,<3",
  "pypdf>=6,<7",
  "pwdlib[argon2]>=0.3,<1",
  "pyjwt>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]
ml = ["sentence-transformers>=5,<6"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
